# email-triage-openenv-pro

./: .env.template  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  SUBMISSION_GUIDE.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py  test_setup.py  validate-local.sh
email_triage_env/: __init__.py  env.py  graders.py  models.py
server/: app.py
