[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Autonomous email triage agent environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "openai==1.3.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["email_triage_env*"]
